Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION pre-2.1.9:
============================

 Kent Landfield (Jul 10, 2003)
  - Small typo in print.c corrected.
       fprintf(fp, "%s ^lt;<em>%s</em>&gt;"...

========================
HYPERMAIL VERSION 2.1.8:
========================

 Kent Landfield (Jun 28, 2003)
  - Updated pcre library with pcre-4.3 sources. We were distributing a 
    much older version. We were distributing version was 3.3 from 
    August 1, 2000. 
  - Updated FILES with the lcc files and the pcre changes.
  - Removed the deprecated "show_hr" from the tests/test.rc file.

 Jose Kahan (Jul 2, 2003)
  - parseurl didn't work well when an URL was quoted and enclosed inside 
    tags. Such as:
    <dd>some url</dd> </dd was put as part of the url.  

 Jose Kahan (Jul 1, 2003)
  - Added WAI enhancements to the list of indexes generated by hypermail.
    To make things perfect, we would need a new configuration option to give
    the format of the date in the list of indexes format. I hard coded it
    for the moment as I ran out of time to do it right now. As it has to
    use an abbreviated date format to avoid having a too big list of indexes,
    we can' t reuse the standard set_dateformat value.
  - Removed warnings detected thru gcc Wall.

 Peter McCluskey (June 30, 2003)
  - Increased max_tokens used to allocate space for linkquotes data struct.

 Jose Kahan (Jun 28, 2003)
  - Code cleaning. Removed the deprecated code for set_showhr and
    set_usetable options.

 Kent Landfield (Jun 28, 2003)
  - Arkadiusz Miskiewicz <arekm@sse.pl> reported progerr() was being 
    called with NULL instead of the previously constructed error message. 
    His supplied patches were applied. 

 Peter McCluskey (June 27, 2003)
  - Made dates in subdirectory index files reflect subdirectory date range,
    rather than the date range for the whole archive.

 Peter McCluskey (June 24, 2003)